first rest api class valid 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=Boot3RestAPI
 server.port=8089
 
 spring.profiles.active=prod
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
