하는중 포스트맨이 안됨

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.port=8089
 spring.profiles.active=prod
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.display-request-duration=true
+springdoc.cache.disabled=true
